[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/PostBattleSummary.gd" id="1"]

[node name="PostBattleSummary" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
anchor_left = 0.25
anchor_top = 0.25
anchor_right = 0.75
anchor_bottom = 0.75
alignment = 1

[node name="TitleLabel" type="Label" parent="VBox"]
text = "Battle Results"
horizontal_alignment = 1

[node name="SummaryLabel" type="Label" parent="VBox"]
autowrap_mode = 1
horizontal_alignment = 1
text = ""

[node name="ContinueButton" type="Button" parent="VBox"]
text = "Continue"

[connection signal="pressed" from="ContinueButton" to="." method="_on_continue_button_pressed"]
